[update]人の点群取得とスケール補正ほぼ完了

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "human_detector"]
 	path = human_detector
 	url = https://github.com/eieioF11/human_detector.git
+[submodule "scale_adjuster"]
+	path = scale_adjuster
+	url = https://github.com/eieioF11/scale_adjuster.git
