--- a/human_detector_core/package.xml
+++ b/human_detector_core/package.xml
@@ -18,6 +18,9 @@
   <depend>tf2_eigen</depend>
   <depend>tf2_geometry_msgs</depend>
 
+  <depend>common_utils</depend>
+  <depend>extension_node</depend>
+
   <depend>tbb</depend>
   <depend>pcl_conversions</depend>
   <depend>libpcl-all-dev</depend>
