--- a/human_detector_core/CMakeLists.txt
+++ b/human_detector_core/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(human_detector_core)
 
+add_compile_options(-O3)
+
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
 endif()
