--- a/human_detector_core/package.xml
+++ b/human_detector_core/package.xml
@@ -17,6 +17,8 @@
   <depend>tf2</depend>
   <depend>tf2_eigen</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>visualization_msgs</depend>
 
   <depend>common_utils</depend>
   <depend>extension_node</depend>
